fix red button alignment

--- a/style.css
+++ b/style.css
@@ -466,7 +466,7 @@ body{
   text-transform: var(--uppercase);
   font-size: 18px;
   cursor: pointer;
-  color: #5574e2;
+  color: var(--white);
   border: 1px solid #4474a2;
   width: 170px;
   height: 50px;
@@ -591,6 +591,10 @@ footer p{
 }
 
 @media screen and (min-width: 768px){
+  .to-top{
+    right: 8%;
+  }
+
   .landing-page {
     height: 75vh;
     margin-bottom: 30px;
@@ -669,6 +673,9 @@ footer p{
 }
 
 @media screen and (min-width:900px) and (max-width: 1199px) {
+  .to-top{
+    right: 8%;
+  }
   .portfolios{
     height:150vh;
   }
@@ -733,6 +740,10 @@ footer p{
 }
 
 @media screen and (min-width: 1200px) {
+  .to-top{
+    right: 8%;
+  }
+  
   .landing-page{
     height: 100vh;
   }
